# SimpleCompiler

./: CMakeLists.txt  LICENSE
include/: debugWinapi.h  sptr.h
src/ast/: ASTNode.hpp  Expr.cpp  Expr.hpp  Stmt.cpp  Stmt.h
src/emit/: Emitter.cpp  Emitter.h  IEmitter.hpp
src/lexer/: ILexer.hpp  Lexer.cpp  Lexer.hpp  Num.hpp  Real.hpp  Tag.hpp  Token.hpp  TypeToken.hpp  Word.hpp
src/main/: main.cpp
src/parser/: Parser.cpp  Parser.hpp
src/symbols/: Array.hpp  Env.hpp  Id.hpp  Type.hpp
tests/: CMakeLists.txt  test_ast.cpp  test_expr.cpp  test_lexer.cpp  test_symbols.cpp
